[package]
name = "uosckjwncs"
version = "0.1.1"
edition = "2021"

[dependencies]
csv = "1.1.6"
lazy_static = "1.4.0"
regex = "1.6.0"
rust_decimal = { version = "1.26.1", features = ["maths"] }
rust_decimal_macros = "1.26"

# :)
# [profile.dev]
# opt-level = 3
# debug = false
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false
